; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/bocaj/extr_send_unicode.c_unicode_input_finish.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/bocaj/extr_send_unicode.c_unicode_input_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KC_LALT = common dso_local global i32 0, align 4
@KC_SPC = common dso_local global i32 0, align 4
@saved_mods = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unicode_input_finish() #0 {
  %1 = call i32 (...) @get_unicode_input_mode()
  switch i32 %1, label %10 [
    i32 129, label %2
    i32 128, label %2
    i32 130, label %5
  ]

2:                                                ; preds = %0, %0
  %3 = load i32, i32* @KC_LALT, align 4
  %4 = call i32 @unregister_code(i32 %3)
  br label %10

5:                                                ; preds = %0
  %6 = load i32, i32* @KC_SPC, align 4
  %7 = call i32 @register_code(i32 %6)
  %8 = load i32, i32* @KC_SPC, align 4
  %9 = call i32 @unregister_code(i32 %8)
  br label %10

10:                                               ; preds = %0, %5, %2
  %11 = load i32, i32* @saved_mods, align 4
  %12 = call i32 @set_mods(i32 %11)
  ret void
}

declare dso_local i32 @get_unicode_input_mode(...) #1

declare dso_local i32 @unregister_code(i32) #1

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @set_mods(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
